syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/duc-cnzj/mars/pkg/modal;modal";

message GitlabProjectModal {
  int64 id = 1;
  string default_branch = 2;
  string name = 3;
  int64 gitlab_project_id = 4;
  bool enabled = 5;
  bool global_enabled = 6;
  string global_config = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp deleted_at = 10;
}

message NamespaceModal {
  int64 id = 1;
  string name = 2;
  repeated string image_pull_secrets = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp deleted_at = 6;

  repeated ProjectModal projects = 7;
}

message ProjectModal {
  int64 id = 1;
  string name = 2;
  int64 gitlab_project_id = 3;
  string gitlab_branch = 4;
  string gitlab_commit = 5;
  string config = 6;
  string override_values = 7;
  string docker_image = 8;
  string pod_selectors = 9;
  int64 namespace_id = 10;
  bool atomic = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  google.protobuf.Timestamp deleted_at = 14;
  NamespaceModal namespace = 15;
}